Fix scrollbars

--- a/client/src/components/tooltip/tooltip.module.scss
+++ b/client/src/components/tooltip/tooltip.module.scss
@@ -20,8 +20,12 @@
 }
 
 .tooltipContainer {
-	width: 0px;
-	height: 0px;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .tooltipBox {
